# project-2025-10-2220-42-01

./: .clang-format  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  implementation_plan.md  main  mnist_example  test_matmul.cpp  test_model_persistence.cpp  test_optimizers  test_optimizers.cpp  test_tensor  test_tensor.cpp  test_tensor_only  test_tensor_only.cpp  test_tensor_simple  test_tensor_simple.cpp  test_tensor_system  test_tensor_system.cpp  xor_example
apps/: main.cpp
cmake/: CompilerWarnings.cmake  DNNLibrary.pc.in  Dependencies.cmake  Options.cmake  README.md  Sanitizers.cmake  StandardProjectSettings.cmake
docs/: README.md  activation_functions.md  api_reference.md  architecture.md  build_system.md  code_quality_standards.md  current_state.md  data_flow.md  examples.md  future_goals.md  gaps.md  implementation_plan.md  layers.md  loss_functions.md  model_system.md  optimizers.md  process_charts.md  roadmap.md  summary.md  tensor_system.md  tracking_system.md  update_process.md  verification_system.md
examples/: layer_example.cpp  mnist_example.cpp  xor_example.cpp
include/: dnn.hpp  dnn_improved.hpp  layers.hpp  model_serializer.hpp  optimizers.hpp  tensor.hpp  tensor_improved.hpp  tensor_ops.hpp  utils.hpp
src/: dnn.cpp  dnn_improved.cpp  layers.cpp  model_serializer.cpp  optimizers.cpp  tensor.cpp  tensor_improved.cpp  tensor_ops.cpp
